--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "marked": "^0.3.6",
     "rosetta-tohtml": "^1.0.0"
   },
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/adamcarheden/rosetta-markdown"
+	},
   "dependencies": {}
 }
